--- a/WpfApp/Properties/Resources.resx
+++ b/WpfApp/Properties/Resources.resx
@@ -115,6 +115,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ReadAllTextAsync.Completed" xml:space="preserve">
-    <value>#{0} task has read {1} bytes from {2}, {3}.</value>
+    <value>#{0} task by thread {1} has read {2} bytes from {3}, {4}.</value>
   </data>
 </root>
